# toyni

./: Cargo.toml  README.md  build.rs
cuda/: ntt_kernel.cu
src/: babybear.rs  cuda_ntt.rs  ext.rs  fibonacci.rs  lib.rs  merkle.rs  ntt.rs  ntt_babybear.rs  prover.rs  transcript.rs  verifier.rs
src/math/: composition.rs  domain.rs  fri.rs  mod.rs  polynomial.rs  stark.rs
src/program/: constraints.rs  trace.rs
src/vm/: constraints.rs  mod.rs  trace.rs
tests/: forgery.rs  fri.rs  stark.rs
