[package]
name = "toyni"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-poly = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
sha2 = "0.10.8"
serde = { version = "1.0.215", features = ["derive"] }
num-bigint = "0.4.1"
num-traits = "0.2.19"
